--- a/owl/index.html
+++ b/owl/index.html
@@ -70,7 +70,7 @@
             <input type="file" id="firmwareFile" name="file" disabled="true"/>
           </p>
           <p>
-            <!-- <button id="download_internal" disabled="true">Flash bootloader</button> -->
+            <button id="download_internal" hidden="true" style="display: none; visibility: hidden" disabled="true">Flash bootloader</button>
             <button id="download_external" disabled="true">Flash firmware</button>
           </p>
           <div class="log" id="downloadLog"></div>
@@ -78,7 +78,7 @@
         <fieldset>
           <legend>Dump flash from device</legend>
           <p>
-            <!-- <button id="upload_internal" disabled="true">Dump bootloader</button> -->
+            <button id="upload_internal" hidden="true" style="display: none; visibility: hidden" disabled="true">Dump bootloader</button>
             <button id="upload_external" disabled="true">Dump firmware</button>
           </p>
           <div class="log" id="uploadLog"></div>
