--- a/owl/index.html
+++ b/owl/index.html
@@ -18,7 +18,7 @@
 	  }else{
 	      document.getElementById('enable-advanced').disabled = false;
 	  }
-	  var e = ["download_internal", "upload_internal"];
+	  var e = ["download_internal", "upload", "upload_internal"];
 	  for(el of e){
 	      document.getElementById(el).style.display = d;
 	      document.getElementById(el).style.visibility = v;
@@ -44,17 +44,22 @@
   <body>
     <!-- <a href="https://github.com/TI-Planet/webdfu_numworks"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/a6677b08c955af8400f44c6298f40e7d19cc5b2d/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677261795f3664366436642e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png"></a> -->
     <p>
-      <span id="status"></span>
+      DFU firmware update utility for OWL1 based devices: OWL Pedal mkI and OWL Modular.
     </p>
+    <p>
+      Plug in your OWL while holding down the LED button, then click Connect.
+    </p>
+    <p style="text-align: center;">
+      <button id="connect">Connect</button>
+    </p>
+    <p><i>
+      <span id="status"></span>
+    </i></p>
     <p style="display: none;">
       <label for="vid">Vendor ID (hex):</label>
       <input type="text" name="vid" id="vid" maxlength="6" size="8" pattern="0x[A-Fa-f0-9]{1,4}"/>
       <label for="pid">Product ID (hex):</label>
       <input type="text" name="pid" id="pid" maxlength="6" size="8" pattern="0x[A-Fa-f0-9]{1,4}"/>
-    </p>
-    <p style="text-align: center;">
-      Plug in your OWL while holding down the LED button, then click Connect:<br>
-      <button id="connect">Connect to OWL</button>
     </p>
     <dialog id="interfaceDialog">
       Your device has multiple DFU interfaces. Select one from the list below:
@@ -82,7 +87,7 @@
         </div>
 
         <legend style="display: none;">DFU mode</legend>
-        <fieldset>
+        <fieldset id="download">
           <legend>Flash firmware or bootloader binary onto device</legend>
           <p><input type="file" id="firmwareFile" name="file" disabled="true"/></p>
           <p>
@@ -91,7 +96,7 @@
           </p>
           <div class="log" id="downloadLog"></div>
         </fieldset>
-        <fieldset>
+        <fieldset id="upload" hidden="true" style="display: none; visibility: hidden">
           <legend>Dump flash binary from device</legend>
           <p>
             <button id="upload_internal" hidden="true" style="display: none; visibility: hidden" disabled="true">Dump bootloader</button>
@@ -103,7 +108,7 @@
     </fieldset>
     <br/>
     <footer>
-      <hr>
+      <hr/>
       <p>WebUSB is currently only supported by Chromium / Google Chrome.</p>
       <p>For Chrome to communicate with a USB device, it must have permission to access the device and the operating system must be able to load a generic driver that libusb can talk to.</p>
       <p>
